--- a/.github/workflows/J2Lint.yml
+++ b/.github/workflows/J2Lint.yml
@@ -18,14 +18,11 @@ jobs:
   # This workflow contains a single job called "build"
   J2LINT:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-      - run: pwd
+      - run: j2lint templates/
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
