--- a/.github/workflows/J2Lint.yml
+++ b/.github/workflows/J2Lint.yml
@@ -7,7 +7,7 @@ on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches: [ main ]
-   # paths: "**.j2"
+    paths: "**.j2"
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -17,19 +17,22 @@ jobs:
   # This workflow contains a single job called "build"
   J2LINT:
     # The type of runner that the job will run on
-    runs-on: ubuntu-20.04
+    #runs-on: ubuntu-20.04
+    runs-on: self-hosted
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
       - run: |
-         git clone https://gitlab.aristanetworks.com/ansible-team/jinja2-linter
-         python3 -m venv myenv
-         source myenv/bin/activate
-         sudo apt-get install python3-pip
-         pip3 install jinja2
-         python setup.py install
+         #git clone https://gitlab.aristanetworks.com/ansible-team/jinja2-linter
+         #python3 -m venv myenv
+         #source myenv/bin/activate
+         #sudo apt-get install python3-pip
+         #pip3 install jinja2
+         #python setup.py install
+         #cd jinja2-linter
+         . ~/ansible2/bin/activate
          j2lint templates/
-         cd jinja2-linter
+         
          
