--- a/.github/workflows/J2Lint.yml
+++ b/.github/workflows/J2Lint.yml
@@ -7,7 +7,7 @@ on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches: [ main ]
-    paths: "**.j2"
+    #paths: "**.j2"
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -34,6 +34,7 @@ jobs:
          python setup.py install
          #. ~/ansible2/bin/activate
          j2lint templates/
+         eccho hello
          
          
          
