--- a/.github/workflows/J2Lint.yml
+++ b/.github/workflows/J2Lint.yml
@@ -27,10 +27,10 @@ jobs:
       - name: Install j2lint
         run: |
          git clone https://github.com/aristanetworks/j2lint.git
-         python3 -m venv myenv
-         source myenv/bin/activate
-         sudo apt-get install python3-pip
-         pip3 install jinja2
+         #python3 -m venv myenv
+         #source myenv/bin/activate
+         #sudo apt-get install python3-pip
+         #pip3 install jinja2
          cd j2lint
          python setup.py install
          pwd
