--- a/.github/workflows/J2Lint.yml
+++ b/.github/workflows/J2Lint.yml
@@ -34,12 +34,12 @@ jobs:
          
       - name: Run J2lint
         run: |
-          echo "${{ env.GITHUB_WORKSPACE }}"
-          echo "${{ env.GITHUB_REPOSITORY }}"
-          source myenv/bin/activate
-          cd j2lint
-          python setup.py install
-          j2lint ../templates/
+          echo $GITHUB_WORKSPACE
+          echo $GITHUB_REPOSITORY
+         # source myenv/bin/activate
+         # cd j2lint
+         # python setup.py install
+          #j2lint ../templates/
          
          
          
